--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,15 +4,15 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Ionic Blank
+      Home
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <ion-item ><div ><img class="image" src="{{profileimage}}">Hi {{username}}  Welcome ,</div></ion-item>
+
+  <!--<ion-card-title>{{ userdetailslogin.displayName }}</ion-card-title>-->
 </ion-content>
