--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -38,7 +38,7 @@
   </ion-card-content>
 
   <ion-card-content>
-    <button ion-button color ="primary" block  (click)="facebook_login()" round>Login with Facebook</button>
+    <button ion-button color ="primary" block  (click)="facebookLoginfirebase()" round>Login with Facebook</button>
 
   </ion-card-content>
        
