--- a/src/pages/jokes/jokes.html
+++ b/src/pages/jokes/jokes.html
@@ -24,5 +24,19 @@ Jokes Page
 
 <ion-card color='light' *ngFor="let JokesArr of JokeList | async">
   <ion-card-content>{{JokesArr.Jokes}}</ion-card-content>
+  <button ion-button clear item-right icon-left small>
+      <ion-icon name="thumbs-up"></ion-icon>
+      likes {{JokesArr.Likes}}
+    </button>
+
+    <button ion-button clear item-center icon-left small>
+      <ion-icon name="thumbs-down"></ion-icon>
+      dislikes {{JokesArr.unlikes}}
+    </button>
+    <button ion-button clear item-center icon-left small>
+      <ion-icon name="share"></ion-icon>
+      share
+    </button>
+    
 </ion-card>
 </ion-content>
